# yscope-dev-utils

./: .gitignore  README.md  lint-requirements.txt  taskfile.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: code-linting-checks.yaml  unit-tests.yaml
cli/clang-tidy-utils/: README.md  pyproject.toml
cli/clang-tidy-utils/src/clang_tidy_utils/: cli.py
cli/clang-tidy-utils/src/yscope_clang_tidy_utils/: cli.py
docs/: index.md  lint-tools-cpp.md
exports/github/actions/install-go-task/: action.yaml
exports/github/actions/install-java/: action.yaml
exports/github/actions/install-python/: action.yaml
exports/github/actions/install-uv/: action.yaml
exports/github/actions/log-tool-versions/: action.yaml
exports/github/actions/print-tool-versions/: action.yaml
exports/lint-configs/: .clang-format  .clang-tidy  .rustfmt.toml  .yamllint.yml  lint-requirements.txt  symlink-config.sh  symlink-cpp-lint-configs.sh  symlink-rust-lint-configs.sh
exports/lint-configs/python/: README.md  mypy.ini  ruff.toml
exports/scripts/: find.py
exports/taskfiles/utils/: boost.yaml  checksum.yaml  cmake.yaml  cpp-lint.yaml  misc.yaml  remote.yaml  utils.yaml
exports/ystdlib-py/: .gitignore  README.md  pyproject.toml
exports/ystdlib-py/src/ystdlib/: __init__.py  find.py  pyfind.py
lint-configs/: .clang-format  .clang-tidy  .markdownlint-cli2.yaml  .yamllint.yml  lint-requirements.txt  symlink-cpp-lint-configs.sh
linters/clang-tidy-utils/: .gitignore  README.md  pyproject.toml
linters/clang-tidy-utils/src/clang_tidy_utils/: cli.py
taskfiles/: lint-venv.yaml  lint-yaml.yaml  lint.yaml  tests.yaml  utils-checksum.yaml  utils-cmake.yaml  utils-cpp-lint.yaml  utils-cpp.yaml  utils-misc.yaml  utils-remote.yaml  utils.yaml  utils.yml
taskfiles/boost/: CMakeLists.txt  boost-test.cpp  test_boost.cpp  tests.yaml
taskfiles/checksum/: tests.yaml
taskfiles/lint/: main.yaml  python.yaml  yaml.yaml
taskfiles/remote/: tests.yaml
taskfiles/scripts/: test-find.yaml
taskfiles/utils/: checksum.yaml  cmake.yaml  cpp-lint.yaml  remote.yaml  utils.yaml
taskfiles/ystdlib-py/: test-find.yaml  test-pyfind.yaml  tests.yaml
tests/boost/: .clang-format  CMakeLists.txt  boost-test.cpp  boost-test.yaml
