[project]
name = "ystdlib"
version = "0.1.0"
description = "Python utilities developed and used at YScope."
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
pyfind = "ystdlib.pyfind:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]

[tool.mypy]
strict = true

# Additional output
pretty = true
show_error_code_links = true
show_error_context = true
show_error_end = true

[tool.ruff]
extend = "../lint-configs/python/ruff.toml"
